# bewagram

./: CMakeLists.txt  README.md
bewagramd/: call_button.c  call_button.h  cfg.c  cfg.h  main.c  snap.c  snap.h
cfg/: sensor_config.c
doc/: beward_devices.txt  firmware.txt  proc_umap_vi.txt  reginfo.txt
ds06/: bewagram.ini  ds06.ini  load_hisilicon
evcurl/: evcurl.c  evcurl.h
evgpio/: evgpio.c
hitiny/: hitiny_aio.c  hitiny_aio.h  hitiny_ao.c  hitiny_sys.c  hitiny_sys.h  hitiny_venc.h  hitiny_venc_fd.c  internal.h
libev/: ev.c  ev.h  ev_epoll.c  ev_poll.c
tests/: test_evcurl.c  test_watcher_gpio.c
